syntax = "proto3";

package refugio;

service RefugioService {
  // Obtener lista de perros disponibles
  rpc ObtenerPerros (Vacio) returns (ListaPerros);
  // Solicitar adopci√≥n
  rpc AdoptarPerro (SolicitudAdopcion) returns (RespuestaAdopcion);
}

message Vacio {}

message Perro {
  int32 id = 1;
  string nombre = 2;
  string raza = 3;
  bool disponible = 4;
}

message ListaPerros {
  repeated Perro perros = 1;
}

message SolicitudAdopcion {
  int32 id_perro = 1;
}

message RespuestaAdopcion {
  bool exito = 1;
  string mensaje = 2;
}